Created UI for update task.Added functions updateTask1,editTask

--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@
                   <h4>Task Description : {{task.Legal_Action_Type.template}}</h4>
                 </div>
                 <div class="col-sm-6 col-md-6">
-                  <button class="btn btn-primary" data-toggle="modal" data-target="#myModal1"ng-click="edit(task)" name="button">
+                  <button class="btn btn-primary" data-toggle="modal" ng-click="editTask(task.id)" data-target="#myModal1"ng-click="edit(task)" name="button">
                     <span class="glyphicon glyphicon-pencil"></span>
                   </button>
                   <button class="btn btn-primary" ng-click="deleteTask(task.id)" name="button">
@@ -110,7 +110,7 @@
                       <div class="modal-content">
                         <div class="modal-header">
                           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                          <h4 class="modal-title" id="myModalLabel">Add a task</h4>
+                          <h4 class="modal-title" id="myModalLabel">Update task</h4>
                         </div>
                         <div class="modal-body">
                             <form data-toggle="validator",role="form",name="taskForm">
@@ -118,15 +118,17 @@
                                 <div class="col-sm-12 col-md-12">
                                   <div class="form-group">
                                     <label for="description">Task description</label>
-                                    <input type="text" class="form-control" id="" placeholder="Description" ng-model="task.desc">
+                                    <input type="text" class="form-control" id="" placeholder="{{updateTask.Legal_Action_Type.template}}" ng-model="task1.desc">
                                   </div>
                                 </div>
                               </div>
                               <div class="row">
                                 <div class="col-sm-12 col-md-12">
                                   <div class="form-group">
-                                    <label for="action">Action</label>
-                                    <select class="form-control" ng-model="task.Legal_Action_Type.legal_action">
+                                    <label for="action">
+                                      Action : {{updateTask.Legal_Action_Type.legal_action}}
+                                    </label>
+                                    <select class="form-control" ng-model="task1.Legal_Action_Type.legal_action">
                                       <option value="Review Uploaded Docs">Review Uploaded Docs</option>
                                       <option value="Upload draft docs">Upload draft docs</option>
                                     </select>
@@ -136,13 +138,29 @@
                               <div class="row">
                                 <div class="col-sm-12 col-md-12">
                                   <div class="form-group">
-                                    <label for="operation">Operations</label>
-                                    <select class="form-control" ng-model="operation.operation">
+                                    <label for="operation">
+                                      Operations : <span class="" ng-repeat="operationNeeded in updateTask.Legal_Action_Type.Action_Type_Operation">
+                                        {{operationNeeded.operation}},
+                                      </span>
+                                    </label>
+                                    <select class="form-control" ng-model="operation1.operation">
                                       <option value="Email">Email</option>
                                       <option value="From">From</option>
                                     </select>
                                   </div>
                                 </div>
+                              </div>
+                              <div class="row" >
+                                <div class="form-group">
+                                  <label for="Documents">
+                                    Documents -
+                                    <div class="row" ng-repeat="document in updateTask.Documents">
+                                      <span class="" >
+                                        {{document.name}}
+                                      </span>
+                                    </div>
+                                  </label>
+                                <div>
                               </div>
                               <div class="row">
                                 <div class="col-sm-12 col-md-12">
@@ -156,7 +174,7 @@
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                          <button type="button" class="btn btn-primary" ng-click="createTask(task,operation,Document)" data-dismiss="modal">Edit Task</button>
+                          <button type="button" class="btn btn-primary" ng-click="updateTask1(updateTask,task1,operation1)" data-dismiss="modal">Edit Task</button>
                         </div>
                       </div>
                     </div>
