--- a/app/index.html
+++ b/app/index.html
@@ -20,23 +20,30 @@
   </head>
   <body ng-app="lxApp">
     <div class="container">
-      <h1>Lexstart</h1>
-      <div class="" ng-controller="taskCtrl">
-      <div class="row" >
-        <div class="col-sm-6 col-md-6">
-          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-            Add task
-          </button>
+      <div class="row ">
+        <div class="col-sm-4 col-md-4 col-sm-offset-4 col-md-offset-4">
+          <h1>Lexstart</h1>
         </div>
       </div>
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">Add a task</h4>
-            </div>
-            <div class="modal-body">
+      <div class="" ng-controller="taskCtrl">
+        <div class="row" >
+          <div class="col-sm-6 col-md-6">
+            <h3>Task List</h3>
+          </div>
+          <div class="col-sm-6 col-md-6">
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+              Add task
+            </button>
+          </div>
+        </div>
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Add a task</h4>
+              </div>
+              <div class="modal-body">
                 <form data-toggle="validator",role="form",name="taskForm">
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
@@ -77,7 +84,7 @@
                     </div>
                   </div>
                 </form>
-            </div>
+              </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               <button type="button" class="btn btn-primary" ng-click="createTask(task,operation,Document)" data-dismiss="modal">Create Task</button>
@@ -85,15 +92,12 @@
           </div>
         </div>
       </div>
-
       <!-- task list -->
-
-        <h3>Task List</h3>
-        <div class="row">
-          <div class="col-sm-12 col-md-12">
-            <!-- {{tasks}} -->
-            <hr>
-            <div ng-repeat="task in data.tasks">
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <hr>
+          <div ng-repeat="task in data.tasks">
+            <div class="row">
               <div class="row">
                 <div class="col-sm-6 col-md-6">
                   <h4>Task Description : {{task.Legal_Action_Type.template}}</h4>
@@ -105,120 +109,129 @@
                   <button class="btn btn-primary" ng-click="deleteTask(task.id)" name="button">
                     <span class="glyphicon glyphicon-trash"></span>
                   </button>
-                  <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                    <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                          <h4 class="modal-title" id="myModalLabel">Update task</h4>
+                </div>
+              </div>
+              <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                      <h4 class="modal-title" id="myModalLabel">Update task</h4>
+                    </div>
+                    <div class="modal-body">
+                      <form data-toggle="validator",role="form",name="taskForm">
+                        <div class="row">
+                          <div class="col-sm-12 col-md-12">
+                            <div class="form-group">
+                              <label for="description">Task description</label>
+                              <input type="text" class="form-control" id="" placeholder="{{updateTask.Legal_Action_Type.template}}" ng-model="task1.desc">
+                            </div>
+                          </div>
                         </div>
-                        <div class="modal-body">
-                            <form data-toggle="validator",role="form",name="taskForm">
-                              <div class="row">
-                                <div class="col-sm-12 col-md-12">
-                                  <div class="form-group">
-                                    <label for="description">Task description</label>
-                                    <input type="text" class="form-control" id="" placeholder="{{updateTask.Legal_Action_Type.template}}" ng-model="task1.desc">
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="row">
-                                <div class="col-sm-12 col-md-12">
-                                  <div class="form-group">
-                                    <label for="action">
-                                      Action : {{updateTask.Legal_Action_Type.legal_action}}
-                                    </label>
-                                    <select class="form-control" ng-model="task1.Legal_Action_Type.legal_action">
-                                      <option value="Review Uploaded Docs">Review Uploaded Docs</option>
-                                      <option value="Upload draft docs">Upload draft docs</option>
-                                    </select>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="row">
-                                <div class="col-sm-12 col-md-12">
-                                  <div class="form-group">
-                                    <label for="operation">
-                                      Operations : <span class="" ng-repeat="operationNeeded in updateTask.Legal_Action_Type.Action_Type_Operation">
-                                        {{operationNeeded.operation}},
-                                      </span>
-                                    </label>
-                                    <select class="form-control" ng-model="operation1.operation">
-                                      <option value="Email">Email</option>
-                                      <option value="From">From</option>
-                                    </select>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="row" >
-                                <div class="form-group">
-                                  <label for="Documents">
-                                    Documents -
-                                    <div class="row" ng-repeat="document in updateTask.Documents">
-                                      <span class="" >
-                                        {{document.name}}
-                                      </span>
-                                    </div>
-                                  </label>
-                                <div>
-                              </div>
-                              <div class="row">
-                                <div class="col-sm-12 col-md-12">
-                                  <div class="form-group">
-                                    <a href="javascript:;" drop-box-picker on-dropbox-success="onDropboxSuccess(files)"  on-dropbox-cancel="onDropboxCancel()">Dropbox Picker</a>
-
-                                  </div>
-                                </div>
-                              </div>
-                            </form>
+                        <div class="row">
+                          <div class="col-sm-12 col-md-12">
+                            <div class="form-group">
+                              <label for="action">
+                                Action : {{updateTask.Legal_Action_Type.legal_action}}
+                              </label>
+                              <select class="form-control" ng-model="task1.Legal_Action_Type.legal_action">
+                                <option value="Review Uploaded Docs">Review Uploaded Docs</option>
+                                <option value="Upload draft docs">Upload draft docs</option>
+                              </select>
+                            </div>
+                          </div>
                         </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                          <button type="button" class="btn btn-primary" ng-click="updateTask1(updateTask,task1,operation1)" data-dismiss="modal">Edit Task</button>
+                        <div class="row">
+                          <div class="col-sm-12 col-md-12">
+                            <div class="form-group">
+                              <label for="operation">
+                                Operations :<span class="" ng-repeat="operationNeeded in updateTask.Legal_Action_Type.Action_Type_Operation">
+                                  {{operationNeeded.operation}},
+                                  </span>
+                              </label>
+                              <select class="form-control" ng-model="operation1.operation">
+                                <option value="Email">Email</option>
+                                <option value="From">From</option>
+                              </select>
+                            </div>
+                          </div>
                         </div>
-                      </div>
+                        <div class="row" >
+                          <div class="form-group">
+                            <label for="Documents">
+                              Documents -
+                                <div class="row" ng-repeat="document in updateTask.Documents">
+                                  <span class="" >
+                                    {{document.name}}
+                                  </span>
+                                </div>
+                            </label>
+                          <div>
+                        </div>
+                        <div class="row">
+                          <div class="col-sm-12 col-md-12">
+                            <div class="form-group">
+                              <a href="javascript:;" drop-box-picker on-dropbox-success="onDropboxSuccess(files)"  on-dropbox-cancel="onDropboxCancel()">Dropbox Picker</a>
+                            </div>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary" ng-click="updateTask1(updateTask,task1,operation1)" data-dismiss="modal">Edit Task</button>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="row">
-                <h4>Task Date : {{task.created_at}}</h4>
-              </div>
-              <div class="row">
-                <h4>
-                  Task Actions :
-                  <span class="" ng-repeat="operationNeeded in task.Legal_Action_Type.Action_Type_Operation">
-                    {{operationNeeded.operation}},
-                  </span>
-                </h4>
-              </div>
-              <div class="row" ng-repeat="document in task.Documents">
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h3 class="panel-title">
-                      <a data-toggle="collapse" data-target="#{{document.id +''+ task.id}}"
-                      href="#{{document.id +''+ task.id}}">{{document.name}}</a>
-                    </h3>
-                  </div>
-                  <div id="{{document.id +''+ task.id}}" class="panel-collapse collapse">
-                    <div class="panel-body">
-                      <div class="row">
-                        Date:{{document.created_at}}
-                      </div>
-                      <div class="row">
-                        Download Url:<a href="{{document.url}}">{{document.url}}</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <hr>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-12 col-md-12">
+              <h4>Task Date : {{task.created_at}}</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12 col-md-12">
+              <h4>
+                Task Actions :
+                <span class="" ng-repeat="operationNeeded in task.Legal_Action_Type.Action_Type_Operation">
+                  {{operationNeeded.operation}},
+                </span>
+              </h4>
+            </div>
+          </div>
+          <div class="row" ng-repeat="document in task.Documents">
+            <div class="col-sm-12 col-md-12">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">
+                    <a data-toggle="collapse" data-target="#{{document.id +''+ task.id}}"
+                    href="#{{document.id +''+ task.id}}">{{document.name}}</a>
+                  </h3>
+                </div>
+                <div id="{{document.id +''+ task.id}}" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <div class="row">
+                      Date:{{document.created_at}}
+                    </div>
+                    <div class="row">
+                      Download Url:<a href="{{document.url}}">{{document.url}}</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr>
         </div>
       </div>
-
     </div>
+  </div>
+</div>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
